objects/Agent_Actual_Yearly__c/Agent_Actual_Yearly__c.object-meta.xml
<CustomObject>
    <label>Agent Actual Yearly</label>
    <nameField>
        <displayFormat>AAY-{0000000000}</displayFormat>
        <label>Agent Actual Yearly ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Actual Yearly</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>