objects/Agent_Actual_Yearly__c/fields/Cases_Closed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Closed__c</fullName>
    <label>Cases Closed</label>
    <summarizedField>Agent_Actual_Monthly__c.Cases_Closed__c</summarizedField>
    <summaryForeignKey>Agent_Actual_Monthly__c.Agent_Actual_Yearly__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>