objects/Agent_Actual_Yearly__c/fields/Cases_Opened__c.field-meta.xml
<CustomField>
    <fullName>Cases_Opened__c</fullName>
    <label>Cases Opened</label>
    <summarizedField>Agent_Actual_Monthly__c.Cases_Opened__c</summarizedField>
    <summaryForeignKey>Agent_Actual_Monthly__c.Agent_Actual_Yearly__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>