objects/Agent_Actual_Yearly__c/fields/No_of_New_Prospects__c.field-meta.xml
<CustomField>
    <fullName>No_of_New_Prospects__c</fullName>
    <label>No. of New Prospects</label>
    <summarizedField>Agent_Actual_Monthly__c.No_of_New_Prospects__c</summarizedField>
    <summaryForeignKey>Agent_Actual_Monthly__c.Agent_Actual_Yearly__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>