objects/Agent_Actual_Yearly__c/fields/Production_Count__c.field-meta.xml
<CustomField>
    <fullName>Production_Count__c</fullName>
    <label>Production Count</label>
    <summarizedField>Agent_Actual_Monthly__c.Production_Count__c</summarizedField>
    <summaryForeignKey>Agent_Actual_Monthly__c.Agent_Actual_Yearly__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>